[gd_scene load_steps=3 format=3 uid="uid://dpxb62ugj0y02"]

[ext_resource type="Script" path="res://addons/ResourcePlus/src/Resources.gd" id="1_2mmtg"]
[ext_resource type="Script" path="res://addons/ResourcePlus/src/ResourceTree.gd" id="2_22tl0"]

[node name="Resources" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -2.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_2mmtg")

[node name="Tree" type="Tree" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
hide_root = true
script = ExtResource("2_22tl0")

[node name="Collapse" type="Button" parent="."]
layout_mode = 2
size_flags_vertical = 0
text = "^"

[node name="BaseMenu" type="PopupMenu" parent="."]
size = Vector2i(179, 100)
item_count = 5
item_0/text = "Create New"
item_0/id = 1
item_1/id = 2
item_1/separator = true
item_2/text = "Show in FileSystem"
item_3/id = 3
item_3/separator = true
item_4/text = "Add Color"
item_4/id = 4

[node name="InstanceMenu" type="PopupMenu" parent="."]
size = Vector2i(179, 100)
item_count = 1
item_0/text = "Show in FileSystem"

[node name="FileDialog" type="FileDialog" parent="."]
size = Vector2i(392, 180)
filters = PackedStringArray("*.tres")

[node name="ColorPanel" type="PopupPanel" parent="."]
title = "COLOR"
initial_position = 2
size = Vector2i(306, 619)

[node name="VBoxContainer" type="VBoxContainer" parent="ColorPanel"]
offset_left = 4.0
offset_top = 4.0
offset_right = 302.0
offset_bottom = 615.0

[node name="ColorPicker" type="ColorPicker" parent="ColorPanel/VBoxContainer"]
layout_mode = 2

[node name="Select" type="Button" parent="ColorPanel/VBoxContainer"]
layout_mode = 2
text = "SELECT"

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="gui_input" from="Tree" to="." method="_on_tree_gui_input"]
[connection signal="pressed" from="Collapse" to="." method="_on_collapse_pressed"]
[connection signal="id_pressed" from="BaseMenu" to="." method="_on_popup_menu_id_pressed"]
[connection signal="id_pressed" from="InstanceMenu" to="." method="_on_popup_menu_id_pressed"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_file_dialog_file_selected"]
[connection signal="visibility_changed" from="ColorPanel" to="." method="_on_color_panel_visibility_changed"]
[connection signal="color_changed" from="ColorPanel/VBoxContainer/ColorPicker" to="." method="_on_color_picker_color_changed"]
[connection signal="pressed" from="ColorPanel/VBoxContainer/Select" to="." method="_on_select_pressed"]
